--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
     <section class="hero">
         <nav>
-            <img class="logo" src="src/images/logo.png" />
+            <img class="logo" src="Profile-C/src/images/logo.png">
             <ul id="nav-List">
                 <li><a href="#about-me">About me</a></li>
                 <li><a href="#projects">Projects</a></li>
@@ -64,7 +64,7 @@
             <p>My name is Ben Cosbey I am a full stack web developer</p>
         </div>
         <div class="headshot-container">
-            <img class="headshot" src="/Users/bencosbey/Desktop/Portfolio-C/src/images/Profilepic.jpg" />
+            <img class="headshot" src="Portfolio-C/src/images/Profilepic.jpg" />
         </div>
     </section>
     <section class="sub-section-alternative" id="projects">
