--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
     <section class="hero">
         <nav>
-            <img class="logo" src="src="Portfolio-C/src/images/logo.png" />
+            <img class="logo" src="Portfolio-C/src/images/logo.png" />
             <ul id="nav-List">
                 <li><a href="#about-me">About me</a></li>
                 <li><a href="#projects">Projects</a></li>
